# pik-pro-player

./: .gitignore  HANDOFF-2026-07-01-Claude-Code.md  HANDOFF-2026-07-01-to-CodeX.md  HANDOFF-2026-07-02-to-OpenCode.md  HANDOFF-CODEX-2026-07-02-RESCUE.md  HANDOFF.md  PLAYER-ENGINE-PLAN.md  PROGRESS.md  PROMPT-FOR-CODEX.md  PROMPT-FOR-OPENCODE-2026-07-02-COMPONENTIZATION.md  README.md  RESET-NOTES.md  fix_css.py  fix_css2.py  fix_css3.py  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: launch.json
canvas/: cowart-selection.json  cowart-view-state.json
canvas/pages/page/: cowart-canvas.json
scratch/: Code.gs
src/: main.tsx  meteringConfig.ts  speakerConfig.ts  styles.css  types.ts  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  notes.rs
src-tauri/src/player/: atmos.rs  atmos_wrapper.m  lufs.rs  mod.rs
src/components/: LoudnessPanel.tsx  NotesPanel.tsx  SpeakerRoom.tsx  Timeline.tsx  TransportBar.tsx
src/services/: share.ts
tickets/: C1-speaker-room.md  C2-loudness-panel.md  C3-transport-bar.md  C4-timeline.md  C5-notes-panel.md  V1-T1-timeline-playback.md  V1-U1-topbar-redesign.md
