[package]
name = "pik-pro-player"
version = "0.1.0"
description = "Pik Pro Player"
authors = ["Micky Yang"]
edition = "2021"

[lib]
name = "pik_pro_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
